WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192265
Editable images should always return some data, even if the canvas doesn't have a size yet
https://bugs.webkit.org/show_bug.cgi?id=192265
Summary
Editable images should always return some data, even if the canvas doesn't ha...
Tim Horton
Reported
2018-11-30 16:16:35 PST
Editable images should always return some data, even if the canvas doesn't have a size yet
Attachments
Patch
(5.50 KB, patch)
2018-11-30 16:16 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-11-30 16:16:49 PST
Created
attachment 356259
[details]
Patch
Tim Horton
Comment 2
2018-11-30 16:16:51 PST
<
rdar://problem/46385911
>
WebKit Commit Bot
Comment 3
2018-11-30 17:10:33 PST
The commit-queue encountered the following flaky tests while processing
attachment 356259
[details]
: inspector/css/css-property.html
bug 192269
(authors:
drousso@apple.com
and
nvasilyev@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2018-11-30 17:11:21 PST
Comment on
attachment 356259
[details]
Patch Clearing flags on attachment: 356259 Committed
r238767
: <
https://trac.webkit.org/changeset/238767
>
WebKit Commit Bot
Comment 5
2018-11-30 17:11:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug